# LaserCal-Embedded-Motion-Control-and-Sensor-Integration

./: .gitignore  CMakeLists.txt  README.md
qml/: Main.qml
src/: calibration_manager.cpp  calibration_manager.h  database_manager.cpp  database_manager.h  main.cpp  motion_controller.cpp  motion_controller.h  sensor_simulator.cpp  sensor_simulator.h
